--- a/docs/.vuepress/theme/styles/index.scss
+++ b/docs/.vuepress/theme/styles/index.scss
@@ -567,4 +567,8 @@ body {
   .vp-site-name {
     display: none;
   }
+
+  div[class*=language-] {
+    margin: 0.75rem -0.75rem !important;
+  }
 }
